cmake_minimum_required(VERSION 3.9)
project(postcoin)

set(CMAKE_CXX_STANDARD 11)

add_executable(postcoin
        src/json/json_spirit.h
        src/json/json_spirit_error_position.h
        src/json/json_spirit_reader.cpp
        src/json/json_spirit_reader.h
        src/json/json_spirit_reader_template.h
        src/json/json_spirit_stream_reader.h
        src/json/json_spirit_utils.h
        src/json/json_spirit_value.cpp
        src/json/json_spirit_value.h
        src/json/json_spirit_writer.cpp
        src/json/json_spirit_writer.h
        src/json/json_spirit_writer_template.h
        src/leveldb/db/autocompact_test.cc
        src/leveldb/db/builder.cc
        src/leveldb/db/builder.h
        src/leveldb/db/c.cc
        src/leveldb/db/c_test.c
        src/leveldb/db/corruption_test.cc
        src/leveldb/db/db_bench.cc
        src/leveldb/db/db_impl.cc
        src/leveldb/db/db_impl.h
        src/leveldb/db/db_iter.cc
        src/leveldb/db/db_iter.h
        src/leveldb/db/db_test.cc
        src/leveldb/db/dbformat.cc
        src/leveldb/db/dbformat.h
        src/leveldb/db/dbformat_test.cc
        src/leveldb/db/filename.cc
        src/leveldb/db/filename.h
        src/leveldb/db/filename_test.cc
        src/leveldb/db/leveldb_main.cc
        src/leveldb/db/log_format.h
        src/leveldb/db/log_reader.cc
        src/leveldb/db/log_reader.h
        src/leveldb/db/log_test.cc
        src/leveldb/db/log_writer.cc
        src/leveldb/db/log_writer.h
        src/leveldb/db/memtable.cc
        src/leveldb/db/memtable.h
        src/leveldb/db/repair.cc
        src/leveldb/db/skiplist.h
        src/leveldb/db/skiplist_test.cc
        src/leveldb/db/snapshot.h
        src/leveldb/db/table_cache.cc
        src/leveldb/db/table_cache.h
        src/leveldb/db/version_edit.cc
        src/leveldb/db/version_edit.h
        src/leveldb/db/version_edit_test.cc
        src/leveldb/db/version_set.cc
        src/leveldb/db/version_set.h
        src/leveldb/db/version_set_test.cc
        src/leveldb/db/write_batch.cc
        src/leveldb/db/write_batch_internal.h
        src/leveldb/db/write_batch_test.cc
        src/leveldb/doc/bench/db_bench_sqlite3.cc
        src/leveldb/doc/bench/db_bench_tree_db.cc
        src/leveldb/helpers/memenv/memenv.cc
        src/leveldb/helpers/memenv/memenv.h
        src/leveldb/helpers/memenv/memenv_test.cc
        src/leveldb/include/leveldb/c.h
        src/leveldb/include/leveldb/cache.h
        src/leveldb/include/leveldb/comparator.h
        src/leveldb/include/leveldb/db.h
        src/leveldb/include/leveldb/env.h
        src/leveldb/include/leveldb/filter_policy.h
        src/leveldb/include/leveldb/iterator.h
        src/leveldb/include/leveldb/options.h
        src/leveldb/include/leveldb/slice.h
        src/leveldb/include/leveldb/status.h
        src/leveldb/include/leveldb/table.h
        src/leveldb/include/leveldb/table_builder.h
        src/leveldb/include/leveldb/write_batch.h
        src/leveldb/issues/issue178_test.cc
        src/leveldb/port/win/stdint.h
        src/leveldb/port/atomic_pointer.h
        src/leveldb/port/port.h
        src/leveldb/port/port_example.h
        src/leveldb/port/port_posix.cc
        src/leveldb/port/port_posix.h
        src/leveldb/port/port_win.cc
        src/leveldb/port/port_win.h
        src/leveldb/port/thread_annotations.h
        src/leveldb/table/block.cc
        src/leveldb/table/block.h
        src/leveldb/table/block_builder.cc
        src/leveldb/table/block_builder.h
        src/leveldb/table/filter_block.cc
        src/leveldb/table/filter_block.h
        src/leveldb/table/filter_block_test.cc
        src/leveldb/table/format.cc
        src/leveldb/table/format.h
        src/leveldb/table/iterator.cc
        src/leveldb/table/iterator_wrapper.h
        src/leveldb/table/merger.cc
        src/leveldb/table/merger.h
        src/leveldb/table/table.cc
        src/leveldb/table/table_builder.cc
        src/leveldb/table/table_test.cc
        src/leveldb/table/two_level_iterator.cc
        src/leveldb/table/two_level_iterator.h
        src/leveldb/util/arena.cc
        src/leveldb/util/arena.h
        src/leveldb/util/arena_test.cc
        src/leveldb/util/bloom.cc
        src/leveldb/util/bloom_test.cc
        src/leveldb/util/cache.cc
        src/leveldb/util/cache_test.cc
        src/leveldb/util/coding.cc
        src/leveldb/util/coding.h
        src/leveldb/util/coding_test.cc
        src/leveldb/util/comparator.cc
        src/leveldb/util/crc32c.cc
        src/leveldb/util/crc32c.h
        src/leveldb/util/crc32c_test.cc
        src/leveldb/util/env.cc
        src/leveldb/util/env_posix.cc
        src/leveldb/util/env_test.cc
        src/leveldb/util/env_win.cc
        src/leveldb/util/filter_policy.cc
        src/leveldb/util/hash.cc
        src/leveldb/util/hash.h
        src/leveldb/util/histogram.cc
        src/leveldb/util/histogram.h
        src/leveldb/util/logging.cc
        src/leveldb/util/logging.h
        src/leveldb/util/mutexlock.h
        src/leveldb/util/options.cc
        src/leveldb/util/posix_logger.h
        src/leveldb/util/random.h
        src/leveldb/util/status.cc
        src/leveldb/util/testharness.cc
        src/leveldb/util/testharness.h
        src/leveldb/util/testutil.cc
        src/leveldb/util/testutil.h
        src/obj/zerocoin/Accumulator.cpp
        src/obj/zerocoin/Accumulator.h
        src/obj/zerocoin/AccumulatorProofOfKnowledge.cpp
        src/obj/zerocoin/AccumulatorProofOfKnowledge.h
        src/obj/zerocoin/Coin.cpp
        src/obj/zerocoin/Coin.h
        src/obj/zerocoin/CoinSpend.cpp
        src/obj/zerocoin/CoinSpend.h
        src/obj/zerocoin/Commitment.cpp
        src/obj/zerocoin/Commitment.h
        src/obj/zerocoin/ParamGeneration.cpp
        src/obj/zerocoin/ParamGeneration.h
        src/obj/zerocoin/Params.cpp
        src/obj/zerocoin/Params.h
        src/obj/zerocoin/SerialNumberSignatureOfKnowledge.cpp
        src/obj/zerocoin/SerialNumberSignatureOfKnowledge.h
        src/obj/zerocoin/SpendMetaData.cpp
        src/obj/zerocoin/SpendMetaData.h
        src/obj/zerocoin/Zerocoin.h
        src/obj/zerocoin/ZeroTest.cpp
        src/obj/zerocoin/ZeroTest.h
        src/qt/test/test_main.cpp
        src/qt/test/uritests.cpp
        src/qt/test/uritests.h
        src/qt/aboutdialog.cpp
        src/qt/aboutdialog.h
        src/qt/addressbookpage.cpp
        src/qt/addressbookpage.h
        src/qt/addresstablemodel.cpp
        src/qt/addresstablemodel.h
        src/qt/askpassphrasedialog.cpp
        src/qt/askpassphrasedialog.h
        src/qt/bitcoin.cpp
        src/qt/bitcoinaddressvalidator.cpp
        src/qt/bitcoinaddressvalidator.h
        src/qt/bitcoinamountfield.cpp
        src/qt/bitcoinamountfield.h
        src/qt/bitcoingui.cpp
        src/qt/bitcoingui.h
        src/qt/bitcoinstrings.cpp
        src/qt/bitcoinunits.cpp
        src/qt/bitcoinunits.h
        src/qt/clientmodel.cpp
        src/qt/clientmodel.h
        src/qt/coincontroldialog.cpp
        src/qt/coincontroldialog.h
        src/qt/coincontroltreewidget.cpp
        src/qt/coincontroltreewidget.h
        src/qt/csvmodelwriter.cpp
        src/qt/csvmodelwriter.h
        src/qt/editaddressdialog.cpp
        src/qt/editaddressdialog.h
        src/qt/guiconstants.h
        src/qt/guiutil.cpp
        src/qt/guiutil.h
        src/qt/macdockiconhandler.h
        src/qt/monitoreddatamapper.cpp
        src/qt/monitoreddatamapper.h
        src/qt/notificator.cpp
        src/qt/notificator.h
        src/qt/optionsdialog.cpp
        src/qt/optionsdialog.h
        src/qt/optionsmodel.cpp
        src/qt/optionsmodel.h
        src/qt/overviewpage.cpp
        src/qt/overviewpage.h
        src/qt/qrcodedialog.cpp
        src/qt/qrcodedialog.h
        src/qt/qtipcserver.cpp
        src/qt/qtipcserver.h
        src/qt/qvalidatedlineedit.cpp
        src/qt/qvalidatedlineedit.h
        src/qt/qvaluecombobox.cpp
        src/qt/qvaluecombobox.h
        src/qt/rpcconsole.cpp
        src/qt/rpcconsole.h
        src/qt/sendcoinsdialog.cpp
        src/qt/sendcoinsdialog.h
        src/qt/sendcoinsentry.cpp
        src/qt/sendcoinsentry.h
        src/qt/signverifymessagedialog.cpp
        src/qt/signverifymessagedialog.h
        src/qt/transactiondesc.cpp
        src/qt/transactiondesc.h
        src/qt/transactiondescdialog.cpp
        src/qt/transactiondescdialog.h
        src/qt/transactionfilterproxy.cpp
        src/qt/transactionfilterproxy.h
        src/qt/transactionrecord.cpp
        src/qt/transactionrecord.h
        src/qt/transactiontablemodel.cpp
        src/qt/transactiontablemodel.h
        src/qt/transactionview.cpp
        src/qt/transactionview.h
        src/qt/walletmodel.cpp
        src/qt/walletmodel.h
        src/test/accounting_tests.cpp
        src/test/allocator_tests.cpp
        src/test/base32_tests.cpp
        src/test/base58_tests.cpp
        src/test/base64_tests.cpp
        src/test/bignum_tests.cpp
        src/test/Checkpoints_tests.cpp
        src/test/DoS_tests.cpp
        src/test/getarg_tests.cpp
        src/test/key_tests.cpp
        src/test/miner_tests.cpp
        src/test/mruset_tests.cpp
        src/test/multisig_tests.cpp
        src/test/netbase_tests.cpp
        src/test/rpc_tests.cpp
        src/test/script_P2SH_tests.cpp
        src/test/script_tests.cpp
        src/test/sigopcount_tests.cpp
        src/test/test_bitcoin.cpp
        src/test/transaction_tests.cpp
        src/test/uint160_tests.cpp
        src/test/uint256_tests.cpp
        src/test/util_tests.cpp
        src/test/wallet_tests.cpp
        src/zerocoin/Accumulator.cpp
        src/zerocoin/Accumulator.h
        src/zerocoin/AccumulatorProofOfKnowledge.cpp
        src/zerocoin/AccumulatorProofOfKnowledge.h
        src/zerocoin/Coin.cpp
        src/zerocoin/Coin.h
        src/zerocoin/CoinSpend.cpp
        src/zerocoin/CoinSpend.h
        src/zerocoin/Commitment.cpp
        src/zerocoin/Commitment.h
        src/zerocoin/ParamGeneration.cpp
        src/zerocoin/ParamGeneration.h
        src/zerocoin/Params.cpp
        src/zerocoin/Params.h
        src/zerocoin/SerialNumberSignatureOfKnowledge.cpp
        src/zerocoin/SerialNumberSignatureOfKnowledge.h
        src/zerocoin/SpendMetaData.cpp
        src/zerocoin/SpendMetaData.h
        src/zerocoin/Zerocoin.h
        src/zerocoin/ZeroTest.cpp
        src/zerocoin/ZeroTest.h
        src/addrman.cpp
        src/addrman.h
        src/aes_helper.c
        src/alert.cpp
        src/alert.h
        src/allocators.h
        src/base58.h
        src/bignum.h
        src/bitcoinrpc.cpp
        src/bitcoinrpc.h
        src/blake.c
        src/bloom.cpp
        src/bloom.h
        src/bmw.c
        src/checkpoints.cpp
        src/checkpoints.h
        src/checkqueue.h
        src/clientversion.h
        src/coincontrol.h
        src/compat.h
        src/crypter.cpp
        src/crypter.h
        src/cubehash.c
        src/db.cpp
        src/db.h
        src/echo.c
        src/groestl.c
        src/hash.cpp
        src/hash.h
        src/hashblock.h
        src/init.cpp
        src/init.h
        src/irc.cpp
        src/irc.h
        src/jh.c
        src/keccak.c
        src/kernel.cpp
        src/kernel.h
        src/key.cpp
        src/key.h
        src/keystore.cpp
        src/keystore.h
        src/limitedmap.h
        src/luffa.c
        src/main.cpp
        src/main.h
        src/miner.cpp
        src/miner.h
        src/mruset.h
        src/net.cpp
        src/net.h
        src/netbase.cpp
        src/netbase.h
        src/noui.cpp
        src/pbkdf2.cpp
        src/pbkdf2.h
        src/protocol.cpp
        src/protocol.h
        src/rpcblockchain.cpp
        src/rpcdump.cpp
        src/rpcmining.cpp
        src/rpcnet.cpp
        src/rpcrawtransaction.cpp
        src/rpcwallet.cpp
        src/script.cpp
        src/script.h
        src/scrypt.cpp
        src/scrypt.h
        src/serialize.h
        src/shavite.c
        src/simd.c
        src/skein.c
        src/sph_blake.h
        src/sph_bmw.h
        src/sph_cubehash.h
        src/sph_echo.h
        src/sph_groestl.h
        src/sph_jh.h
        src/sph_keccak.h
        src/sph_luffa.h
        src/sph_shavite.h
        src/sph_simd.h
        src/sph_skein.h
        src/sph_types.h
        src/strlcpy.h
        src/sync.cpp
        src/sync.h
        src/threadsafety.h
        src/txdb-leveldb.cpp
        src/txdb-leveldb.h
        src/txdb.h
        src/ui_interface.h
        src/uint256.h
        src/util.cpp
        src/util.h
        src/version.cpp
        src/version.h
        src/wallet.cpp
        src/wallet.h
        src/walletdb.cpp
        src/walletdb.h)
